--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <style>
         body {
             font-family: 'Merriweather', serif;
-            background-color: #1C2F40;
-            color: #333;
+            background-color: #FFFFFF;
+            color: #1C2F40;
             margin: 0;
             padding: 0;
             min-height: 100vh;
