Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
 <header>
     <h1>Danny Prowls</h1>
-    <p>Yo no tengo madera de poeta, solo llevo un par de astillas en el alma</p>
+    <p>Yo no tengo madera de poeta,
+        <br> solo llevo un par de astillas en el alma</p>
     <nav>
         <a href="#about">Sobre mí</a>
         <a href="#works">Mis libros</a>
