--- a/index.html
+++ b/index.html
@@ -3,236 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danny Prowls - Escritor y Libros Raros</title>
+    <title>Danny Prowls | Data Analyst & Writer</title>
+    <meta name="description" content="Portfolio de Danny Prowls: Analista de datos en salud, especialista en ética de datos, escritor y creador de contenido sobre el duelo y la experiencia humana">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
-        <nav class="navbar">
-            <div class="logo">Danny Prowls</div>
-            <div class="nav-links">
-                <a href="#inicio">Inicio</a>
-                <a href="#sobre-mi">Sobre mí</a>
-                <a href="#libros">Mis libros</a>
-                <a href="#blog">Blog</a>
-                <a href="#libros-raros">Libros Raros</a>
-                <a href="#contacto">Contacto</a>
-            </div>
+        <nav class="nav">
+            <a href="#hero" class="nav-link active">Inicio</a>
+            <a href="#about" class="nav-link">Sobre mí</a>
+            <a href="#work" class="nav-link">Proyectos</a>
+            <a href="#blog" class="nav-link">Reflexiones</a>
+            <a href="#contact" class="nav-link">Contacto</a>
         </nav>
     </header>
 
-    <!-- Main Content -->
-    <main>
-        <!-- Hero Section -->
-        <section id="inicio" class="hero">
-            <div class="hero-content">
-                <h1 class="hero-title">Danny Prowls</h1>
-                <p class="hero-quote">"Yo no tengo madera de poeta, solo llevo un par de astillas en el alma"</p>
-                <p class="hero-description">Escritor y apasionado de las letras. Explora mi obra literaria y únete a mi viaje a través de las palabras.</p>
-                <div class="hero-buttons">
-                    <a href="#libros" class="btn btn-primary">Descubre mis libros</a>
-                    <a href="#contacto" class="btn btn-outline">Contacto</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- About Section -->
-        <section id="sobre-mi" class="section about-section">
-            <div class="container">
-                <div class="about-grid">
-                    <div class="about-content">
-                        <h2 class="section-title">Sobre mí</h2>
-                        <p class="about-text">Bienvenidos a mi página personal. Soy Danny Prowls, escritor y apasionado de las letras.</p>
-                        <p class="about-text">Aquí encontrarás información sobre mi obra, mis pensamientos y mis próximos proyectos literarios. Mi escritura nace de la necesidad de explorar las emociones humanas más profundas, de dar voz a aquellos sentimientos que a menudo permanecen en silencio.</p>
-                        <p class="about-text">Cada palabra que escribo es un intento de conectar con el alma del lector, de crear puentes entre experiencias compartidas y de encontrar belleza en la fragilidad de nuestra existencia.</p>
-                        <div class="social-links">
-                            <a href="https://instagram.com/u/escritosdannyprowls" target="_blank" class="social-btn">📷 Instagram</a>
-                            <a href="https://facebook.com/MrDannyProwls" target="_blank" class="social-btn">📘 Facebook</a>
-                        </div>
-                    </div>
-                    <div class="about-image">
-                        <div class="placeholder">Fotografía de Danny Prowls</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Books Section -->
-        <section id="libros" class="section books-section">
-            <div class="container">
-                <h2 class="section-title">Mis libros</h2>
-                <p class="section-subtitle">Explora mi obra literaria y sumérgete en mundos de emociones y reflexiones.</p>
-                <div class="book-card">
-                    <div class="book-cover">Si yo muriera esta noche</div>
-                    <div class="book-info">
-                        <h3>Si yo muriera esta noche</h3>
-                        <span class="badge">2020</span>
-                        <p>Mi primer libro, una reflexión poética sobre la vida, el dolor y la fragilidad humana. Escribí esta obra con la intención de capturar emociones intensas, ofreciendo una visión íntima sobre la impermanencia y las preguntas que surgen ante la posibilidad de la muerte.</p>
-                        <p>El libro invita a los lectores a confrontar sus propios miedos y anhelos, y a explorar lo que significa estar vivo cuando enfrentamos la inminencia de lo inevitable.</p>
-                        <div class="book-buttons">
-                            <a href="#" class="btn btn-outline">Leer fragmento</a>
-                            <a href="https://a.co/d/iWvcUCE" target="_blank" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Blog Section -->
-        <section id="blog" class="section blog-section">
-            <div class="container">
-                <h2 class="section-title">Blog</h2>
-                <p class="section-subtitle">Reflexiones, pensamientos y el proceso creativo detrás de mis obras.</p>
-                <div class="blog-grid">
-                    <div class="blog-card">
-                        <span class="blog-category">Reflexiones</span>
-                        <h3>El proceso creativo de un escritor</h3>
-                        <p>Una mirada íntima al proceso de creación literaria...</p>
-                        <a href="#" class="read-more">Leer más</a>
-                    </div>
-                    <div class="blog-card">
-                        <span class="blog-category">Literatura</span>
-                        <h3>La importancia de las emociones en la literatura</h3>
-                        <p>Una mirada íntima al proceso de creación literaria...</p>
-                        <a href="#" class="read-more">Leer más</a>
-                    </div>
-                    <div class="blog-card">
-                        <span class="blog-category">Inspiración</span>
-                        <h3>Encontrando inspiración en lo cotidiano</h3>
-                        <p>Una mirada íntima al proceso de creación literaria...</p>
-                        <a href="#" class="read-more">Leer más</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Rare Books Section -->
-        <section id="libros-raros" class="section rare-books-section">
-            <div class="container">
-                <h2 class="section-title">Libros Raros y Primeras Ediciones</h2>
-                <p class="section-subtitle">Un espacio dedicado a la compra y venta de ejemplares únicos, valorados por su rareza, antigüedad o por ser primeras ediciones.</p>
-                <div class="books-grid">
-                    <div class="rare-book-card">
-                        <span class="badge">Disponible</span>
-                        <div class="book-placeholder">Portada del Libro</div>
-                        <h3>Título del Libro</h3>
-                        <p class="author">Autor Destacado</p>
-                        <div class="book-tags">
-                            <span class="tag">Primera Edición</span>
-                            <span class="tag">1950</span>
-                        </div>
-                        <p class="book-condition">Estado: Excelente</p>
-                        <p class="book-price">$XXX</p>
-                        <a href="#" class="btn btn-outline">Ver Detalles</a>
-                    </div>
-                    <div class="rare-book-card featured">
-                        <span class="badge badge-featured">Destacado</span>
-                        <div class="book-placeholder">Portada del Libro</div>
-                        <h3>Título del Libro</h3>
-                        <p class="author">Autor Reconocido</p>
-                        <div class="book-tags">
-                            <span class="tag">Edición Firmada</span>
-                            <span class="tag">1988</span>
-                        </div>
-                        <p class="book-condition">Estado: Excelente</p>
-                        <p class="book-price">$XXX</p>
-                        <a href="#" class="btn btn-outline">Ver Detalles</a>
-                    </div>
-                    <div class="rare-book-card">
-                        <span class="badge">Disponible</span>
-                        <div class="book-placeholder">Portada del Libro</div>
-                        <h3>Título del Libro</h3>
-                        <p class="author">Autor Clásico</p>
-                        <div class="book-tags">
-                            <span class="tag">Edición Limitada</span>
-                            <span class="tag">2001</span>
-                        </div>
-                        <p class="book-condition">Estado: Excelente</p>
-                        <p class="book-price">$XXX</p>
-                        <a href="#" class="btn btn-outline">Ver Detalles</a>
-                    </div>
-                </div>
-                <div class="sell-section">
-                    <h3>¿Tienes un ejemplar único para vender?</h3>
-                    <p>Te ayudamos a valorarlo y a encontrar un coleccionista. Contáctanos para iniciar el proceso de tasación y venta.</p>
-                    <a href="#contacto" class="btn btn-primary">Vender mi libro</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contacto" class="section contact-section">
-            <div class="container">
-                <div class="contact-grid">
-                    <div class="contact-info">
-                        <h2 class="section-title">Contacto</h2>
-                        <p>¿Tienes alguna pregunta sobre mi obra o te gustaría colaborar? Me encantaría escuchar de ti.</p>
-                        <div class="contact-details">
-                            <div class="contact-item">
-                                <h4>Email</h4>
-                                <p>contacto@dannyprowls.com</p>
-                            </div>
-                            <div class="contact-item">
-                                <h4>Redes sociales</h4>
-                                <p>Sígueme en Instagram y Facebook</p>
-                            </div>
-                        </div>
-                    </div>
-                    <form class="contact-form">
-                        <div class="form-group">
-                            <label>Nombre</label>
-                            <input type="text" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Asunto</label>
-                            <input type="text" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Mensaje</label>
-                            <textarea rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar mensaje</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-grid">
-                <div>
-                    <h3>Danny Prowls</h3>
-                    <p>Escritor y apasionado de las letras</p>
-                </div>
-                <div>
-                    <h4>Navegación</h4>
-                    <ul>
-                        <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#sobre-mi">Sobre mí</a></li>
-                        <li><a href="#libros">Mis libros</a></li>
-                        <li><a href="#blog">Blog</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4>Sígueme</h4>
-                    <ul>
-                        <li><a href="https://instagram.com/u/escritosdannyprowls" target="_blank">Instagram</a></li>
-                        <li><a href="https://facebook.com/MrDannyProwls" target="_blank">Facebook</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Danny Prowls. Todos los derechos reservados.</p>
+    <section id="hero" class="hero">
+        <div class="hero-content">
+            <h1 class="hero-title gradient-text">Danny Prowls</h1>
+            <h2 class="hero-subtitle">Data Analyst & Writer</h2>
+            <p class="hero-description">
+                Explorando ética y datos en salud <br>
+                a través de la poesía y la reflexión humana
+            </p>
+            <div class="hero-buttons">
+                <a href="#work" class="btn btn-primary">Explora mi trabajo</a>
+                <a href="#blog" class="btn btn-secondary">Lee mis reflexiones</a>
+                <a href="#contact" class="btn btn-outline">Contáctame</a>
             </div>
         </div>
+    </section>
+
+    <section id="about" class="about">
+        <h2 class="section-title">Sobre mí</h2>
+        <div class="about-content">
+            <article class="about-professional">
+                <h3>Analista de Datos en Salud & Ética de Datos</h3>
+                <p>
+                    Soy un analista de datos apasionado con una mirada ética sobre el manejo y privacidad de datos en el ámbito de la salud. Creo firmemente que cada dataset representa historias humanas que merecen ser respetadas y entendidas.
+                </p>
+                <p>
+                    Mi experiencia abarca análisis en epidemiología, visualización avanzada y creación de marcos de trabajo para la ética en datos sanitarios.
+                </p>
+            </article>
+            <article class="about-creative">
+                <h3>Escritor & Creador de Contenidos</h3>
+                <p>
+                    Además, soy escritor con una obra literaria centrada en el duelo y la experiencia humana. Mi libro <strong>Si yo muriera esta noche</strong> es un reflejo íntimo de estas temáticas.
+                </p>
+                <p>
+                    Juntos, análisis de datos y escritura forman mi forma de entender y contar mejor las complejidades de la vida y la muerte.
+                </p>
+            </article>
+        </div>
+    </section>
+
+    <section id="work" class="work">
+        <h2 class="section-title">Proyectos Destacados</h2>
+        <div class="work-grid">
+            <article class="work-card">
+                <h3>COVID-19 Health Equity Analysis</h3>
+                <p>
+                    Análisis de patrones de equidad en vacunación en diferentes grupos socioeconómicos, mostrando cómo los datos pueden iluminar disparidades sociales.
+                </p>
+                <p><strong>Habilidades:</strong> Data Analysis, Visualización, Ética en salud</p>
+            </article>
+
+            <article class="work-card">
+                <h3>Guía de Ética en Uso de Datos para Salud</h3>
+                <p>
+                    Guía práctica para implementar políticas de privacidad centradas en las personas en entornos sanitarios.
+                </p>
+                <p><strong>Habilidades:</strong> Ética de datos, Escritura, Política sanitaria</p>
+            </article>
+
+            <article class="work-card">
+                <h3>Libro: Si yo muriera esta noche</h3>
+                <p>
+                    Una obra poética que aborda el duelo, la impermanencia y el significado de la vida ante la muerte.
+                </p>
+                <p><strong>Categoría:</strong> Libro publicado</p>
+            </article>
+        </div>
+    </section>
+
+    <section id="blog" class="blog">
+        <h2 class="section-title">Reflexiones Recientes</h2>
+        <article class="blog-post">
+            <h4>Por qué la privacidad de datos importa para personas enfermas</h4>
+            <p>
+                Cuando se elimina lo abstracto, los datos de salud representan el miedo, la esperanza y la vulnerabilidad de alguien. Aquí te explico por qué esto importa.
+            </p>
+        </article>
+        <article class="blog-post">
+            <h4>La creatividad inesperada en el análisis de datos</h4>
+            <p>
+                Encontrar patrones en datos es similar a buscar significado en la poesía. Ambos requieren intuición y valentía para ver lo que otros no.
+            </p>
+        </article>
+        <article class="blog-post">
+            <h4>El duelo como un lenguaje</h4>
+            <p>
+                Las palabras a veces fallan frente a la pérdida, pero el duelo, como los datos, cuenta una historia si aprendemos su sintaxis.
+            </p>
+        </article>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2 class="section-title">Contacto</h2>
+        <form class="contact-form" action="mailto:contacto@dannyprowls.com" method="post" enctype="text/plain">
+            <label for="name">Nombre</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="subject">Asunto</label>
+            <input type="text" id="subject" name="subject">
+
+            <label for="message">Mensaje</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+
+        <div class="social-links">
+            <a href="https://instagram.com/dannyprowls" target="_blank" rel="noopener">Instagram</a>
+            <a href="https://linkedin.com/in/dannyprowls" target="_blank" rel="noopener">LinkedIn</a>
+            <a href="mailto:contacto@dannyprowls.com">Email</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>© 2025 Danny Prowls. Todos los derechos reservados.</p>
     </footer>
 
     <script src="main.js"></script>
